Add pagination to List expenses API
